--- a/menu.css
+++ b/menu.css
@@ -8,21 +8,66 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   background-color: #000;
-  background-repeat: no-repeat; /* Zabrání opakování */
-  background-size: cover; /* Přizpůsobí obrázek tak, aby pokryl celou plochu */
-  background-position: center;
   height: 100vh;
-  padding: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #container {
   background-color: rgba(255, 255, 255, 0.1);
-  height: 100%;
+  padding: 32px 24px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 32px;
+}
+
+h1 {
+  font-family: "Funnel Display", sans-serif;
+  color: lawngreen;
+  font-size: 3rem;
+  text-align: center;
+}
+
+p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 1.125rem;
+  text-align: center;
+}
+
+button {
+  padding: 24px 32px;
+  font-size: 1rem;
+  font-family: "Funnel Display", sans-serif;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+a button {
+  padding: 24px 32px;
+  font-size: 1rem;
+  font-family: "Funnel Display", sans-serif;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none;
+}
+/* #container {
+  background-color: rgba(255, 255, 255, 0.1);
+  height: 80%;
   width: 100%;
   padding: 24px;
   z-index: 2;
   border-radius: 50px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 #top {
@@ -71,6 +116,48 @@ body {
   height: 20px;
 }
 
+#bottomwrapper {
+  position: relative;
+  bottom: -25px;
+  right: -25px;
+  width: 40%;
+  height: 150px;
+
+  z-index: 3;
+  background-color: #000;
+
+  padding: 16px 64px;
+  border-radius: 15px 0 0 0;
+
+  align-self: flex-end;
+}
+
+#bottomwrapper::after {
+  content: "";
+  background-color: transparent;
+  position: absolute;
+  top: 0;
+  border-radius: 15px 0 0 0;
+  box-shadow: 4.4px 0 rgb(0, 0, 0);
+
+  left: 0;
+  height: 20px;
+  width: 20px;
+}
+
+#bottomwrapper::before {
+  content: "";
+  position: absolute;
+
+  border-radius: 0 0 15px 0;
+  box-shadow: 4.4px 0 rgb(0, 0, 0);
+
+  right: 0px;
+  top: -20px;
+  width: 20px;
+  height: 20px;
+}
+
 #navwrapper nav {
   display: flex;
   height: 100%;
@@ -107,3 +194,60 @@ h1 {
   font-size: 2.5rem;
   margin-bottom: 20px;
 }
+
+#main {
+  display: flex;
+}
+
+#main div {
+  height: 100%;
+  width: 50%;
+  display: flex;
+}
+#imgContainer {
+  align-items: center;
+}
+
+#imgContainer img {
+  height: 700px;
+  width: 700px;
+}
+
+#contetnt {
+  flex-direction: column;
+  justify-content: flex-start;
+  font-family: "Funnel Display", sans-serif;
+}
+
+#contetnt h1 {
+  font-size: 8rem;
+  line-height: 1em;
+  font-weight: 800;
+}
+
+#contetnt button {
+  padding: 20px 32px;
+  width: fit-content;
+  font-family: "Funnel Display", sans-serif;
+  font-size: 1.125rem;
+} */
+
+/* .dot {
+  position: absolute;
+  background-color: transparent;
+  height: 2px;
+  width: 2px;
+  border-radius: 50%;
+  box-shadow: 0 0 2000px 100px purple;
+  z-index: 1;
+}
+
+#one {
+  top: 30%;
+  left: 30%;
+}
+
+#two {
+  bottom: 30%;
+  right: 30%;
+} */
