--- a/desktop.css
+++ b/desktop.css
@@ -3,6 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: "Roboto", sans-serif;
+}
 
 #main {
   background-image: url(/assets/Windows_10.webp);
@@ -32,6 +35,21 @@ button {
   height: 50px;
   width: 50px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+}
+
+.container button img {
+  height: 40px;
+  width: 40px;
+}
+
+.container span {
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.5);
 }
 
 .container {
@@ -39,5 +57,5 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 8px;
+  gap: 4px;
 }
