--- a/desktop.css
+++ b/desktop.css
@@ -42,6 +42,10 @@ button {
   border: none;
 }
 
+.container button:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
 .container button img {
   height: 40px;
   width: 40px;
