--- a/desktop.css
+++ b/desktop.css
@@ -5,6 +5,7 @@
 }
 body {
   font-family: "Roboto", sans-serif;
+  overflow: hidden;
 }
 
 #main {
@@ -62,4 +63,9 @@ button {
   align-items: center;
   justify-content: center;
   gap: 4px;
+}
+
+#navbar img {
+  width: 100%;
+  height: 100%;
 }
