--- a/email.css
+++ b/email.css
@@ -332,7 +332,7 @@ strong {
 
 #timeline h5 {
   font-size: 1.25rem;
-  color: #fafafa;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 #timeline h1 {
@@ -412,4 +412,26 @@ strong {
   height: 16px;
   width: 16px;
   cursor: pointer;
+}
+
+.endwindow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10000;
+  display: none;
+  background-color: #bafa55;
+  align-items: center;
+  justify-content: center;
+}
+
+.endwindow img {
+  height: 250px;
+  width: 250px;
+}
+
+#badEndWindow {
+  background-color: red;
 }
