--- a/email.css
+++ b/email.css
@@ -364,7 +364,8 @@ strong {
 }
 
 #loginFake,
-#loginTeams {
+#loginTeams,
+#antivirWindow {
   background-color: #f0f0f0;
   display: none;
   flex-direction: column;
@@ -396,7 +397,9 @@ strong {
 }
 
 #loginFake button,
-#loginTeams button {
+#loginTeams button,
+#antivirWindow button,
+#doneBtn {
   height: 40px;
   background-color: #ccc;
   border: none;
@@ -404,6 +407,97 @@ strong {
   outline: none;
   padding: 8px;
   cursor: pointer;
+}
+#antivirWindow {
+  max-width: 360px;
+}
+
+#antivirWindow p {
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.5);
+  line-height: 1.4em;
+  text-align: center;
+}
+#antivirWindow #logoAntivir {
+  height: 100px;
+  width: 300px;
+}
+
+#deleting {
+  background-color: #f0f0f0;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 1000;
+  bottom: 100px;
+  width: 400px;
+  height: 200px;
+  left: 100px;
+  padding: 24px;
+  border-radius: 10px;
+  gap: 24px;
+}
+
+#test {
+  background-color: #f0f0f0;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  z-index: 1000;
+  bottom: 100px;
+  width: 400px;
+  left: 600px;
+  padding: 24px;
+  border-radius: 10px;
+  gap: 32px;
+}
+
+#testContetn {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+.questionContent {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.questionWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.answareItemWrapper {
+  display: flex;
+  gap: 8px;
+}
+
+#deleting h2 {
+  text-align: center;
+}
+
+#deleting #loadnigContainer {
+  width: 100%;
+  height: 50px;
+  border: 1px solid black;
+}
+
+#errormesage {
+  color: red;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+#deleting #loadnigContainer #loadingItem {
+  background-color: rgb(0, 255, 0);
+  height: 100%;
 }
 
 #CloseBar {
@@ -438,4 +532,39 @@ strong {
 
 #badEndWindow {
   background-color: red;
+}
+
+#priloha {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+  padding: 12px;
+  border: 1px solid #2b2b2b;
+}
+
+#priloha img {
+  height: 18px;
+  width: 18px;
+}
+
+#imgWrapperPriloha {
+  padding-right: 8px;
+  border-right: 1px solid black;
+  height: 100%;
+}
+
+#priloha span {
+  color: #2b2b2b;
+}
+
+#StatisticWindow {
+  background-color: #fafafa;
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
